language/move-lang/tests/move_check/naming/unbound_module.exp
error: 

   ┌── tests/move_check/naming/unbound_module.move:2:9 ───
   │
 4 │         X.foo();
   │         ^^^^^^^ Invalid function call
   ·
 2 │     use 0x0.X as X;
   │         ----- Unbound module '0x0.X'
   │

